--- a/html/css/style.css
+++ b/html/css/style.css
@@ -307,6 +307,7 @@ input:invalid:not(:focus), select:invalid:not(:focus), textarea:invalid:not(:foc
     margin-left: 12px;
     border: none;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 /* Responsividade para mobile e tablets */
